--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/error-message": "^2.0.1",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.11",
     "@reduxjs/toolkit": "^1.8.6",
@@ -16,9 +17,11 @@
     "list-react-files": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.39.5",
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
