--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "list-files": "^1.1.4",
     "list-react-files": "^0.2.0",
     "react": "^17.0.2",
