--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.39.5",
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.0",
